# SWP_Blitzer

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
FaceDetection/: detect_covered_face.pt  face_detection.py  landmark_detection.py
FutureImprovements/: FaceMask_Detection.ipynb  Landmark_Grayscales.ipynb  Middle_Finger_Detection.ipynb
backup_data/: .PS-959847-Der_Polizeip-2106230853_-0001_0001_00-1_a.png.icloud  .PS-959847-Der_Polizeip-2106230853_-0001_0001_00-1_c.png.icloud  .PS-959847-Der_Polizeip-2106230853_-0001_0001_00-1_h.png.icloud  .PS-959847-Der_Polizeip-2106230853_-0001_0001_00-1_l.png.icloud  .PS-959847-Der_Polizeip-2106230853_-0001_0001_00-1_lp_a.png.icloud  .PS-959847-Der_Polizeip-2106230853_-0001_0001_00-1_lp_c.png.icloud  .PS-959847-Der_Polizeip-2106230853_-0001_0001_00-1_lp_l.png.icloud  .PS-959847-Der_Polizeip-2106230853_-0001_0001_00-1_lp_r.png.icloud  .PS-959847-Der_Polizeip-2106230853_-0001_0001_00-1_r.png.icloud  .PS-959847-Der_Polizeip-2106230900_00001_0001_01-1_a.png.icloud  .PS-959847-Der_Polizeip-2106230900_00001_0001_01-1_c.png.icloud  .PS-959847-Der_Polizeip-2106230900_00001_0001_01-1_h.png.icloud  .PS-959847-Der_Polizeip-2106230900_00001_0001_01-1_l.png.icloud  .PS-959847-Der_Polizeip-2106230900_00001_0001_01-1_r.png.icloud  .PS-959847-Der_Polizeip-2106230900_00003_0002_01-1_l.png.icloud  PS-959847-Der_Polizeip-2106230853_-0001_0001_00.xml  PS-959847-Der_Polizeip-2106230900_00001_0001_01.xml
input_files/: do_not_delete.txt
output_files/: do_not_delete.txt
yellow_folder/: readme.ipynb
