[tool.poetry]
name = "SWP_Blitzer"
version = "0.1.0"
description = "Coming"
authors = ["Marc Oprisiu"]
license = "MIT"

[tool.poetry.dependencies]
python = "^2.7"
imutils = "^0.5.4"
scipy = "^1.6.3"
numpy = "^1.20.3"
dlib = "^19.22.0"
opencv-contrib-python = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
